fix wrapping terminals

--- a/terminal/src/terminal.scss
+++ b/terminal/src/terminal.scss
@@ -90,3 +90,7 @@
         }
     }
 }
+
+.title-span {
+    white-space: nowrap;
+}
